--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,25 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<table class="table table-bordered">
+	<tr>
+		<td><strong>Company Name</strong></td>
+		<td><strong>Job Website</strong></td>
+		<td><strong>Industry</strong></td>
+	</tr>
+	<tr>
+		<td>Google</td>
+		<td><a href="http://www.google.com/about/jobs/" target="_blank">
+			http://www.google.com/about/jobs/</a></td>
+		<td>Internet</td>
+	</tr>
+	<tr>
+		<td>Informatica</td>
+		<td><a href="http://careers.informatica.com/" target="_blank">
+			http://careers.informatica.com/</a></td>
+		<td>Software</td>
+	</tr>
+	<tr>
+		<td>ThoughtWorks</td>
+		<td><a href="http://join.thoughtworks.com/" target="_blank">
+			http://join.thoughtworks.com/</a></td>
+		<td>Software</td>
+	</tr>
+</table>
