--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
       <h3>Need an Alumni Referral?</h3>
       <br><br>
       <address>
-      	<h5>Please send your Resume to:</h5>
-      	<br>Jin Zhang: zhangjin2004@gmail.com
-      	<br>Ping li: pingsj@gmail.com<br>
+      	<strong>Please send your Resume to:</strong><br>
+      	<br><strong>Jin Zhang: </strong><u>zhangjin2004@gmail.com</u>
+      	<br><strong>Ping li: </strong><u>pingsj@gmail.com</u><br>
       </address>
     </div>
     <div class="span8">
