--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="#">Xi'an Jiaotong University - Northen California | Alumni Job Referral </a>
+    <a class="brand" href="http://xjtunc.herokuapp.com/">Xi'an Jiaotong University - Northen California | Alumni Job Referral </a>
   </div>
 </div>
 
