--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,5 +11,5 @@
 <%= table_row("VMware", "http://www.vmware.com/jobs/", "Software", "10,000 +") %>
 <%= table_row("EMC", "http://www.emc.com/corporate/jobs/index.htm", "Software/Hardware", "10,000 +") %>
 <%= table_row("salesforce.com", "http://www.salesforce.com/careers/main/", "Software", "1,000 - 10,000") %>
-
+<%= table_row("VMware", "http://www.vmware.com/jobs/", "Software", "10,000 +") %>
 <%= table_end %>
