--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,11 @@
       	<strong>Please send your Resume to:</strong><br>
       	<br><strong>Jin Zhang: </strong><u>zhangjin2004@gmail.com</u>
       	<br><strong>Ping li: </strong><u>pingsj@gmail.com</u><br>
+      	<br><br><strong>Be sure to include in your email:</strong><br>
+      	<br>- The <u>company</u> you apply
+      	<br>- The <u>job #</u> you apply
+      	<br>- The <u>web page link</u> of the job
+      	<br>- Your <u>contact information</u>
       </address>
     </div>
     <div class="span8">
