--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,17 @@
 <%= table_start %>
-<%= table_row("Google", "http://www.google.com/about/jobs/", "Internet", "10,000 +") %>
-<%= table_row("Facebook", "https://www.facebook.com/careers/", "Internet", "1,000 - 10,000") %>
-<%= table_row("Informatica", "http://careers.informatica.com/", "Software", "1,000 - 10,000") %>
-<%= table_row("ThoughtWorks", "http://join.thoughtworks.com/", "Software", "1,000 - 10,000") %>
-<%= table_row("AT&T", "http://att.jobs/", "Communications", "10,000 +") %>
-<%= table_row("Genentech", "http://www.gene.com/gene/careers/", "Biotech", "10,000 +") %>
-<%= table_row("Cisco", "http://www.cisco.com/web/about/ac40/about_cisco_careers_home.html", "Hardware", "10,000 +") %>
-<%= table_row("Oracle", "http://www.oracle.com/us/corporate/careers/index.html", "Software", "10,000 +") %>
 <%= table_row("Adobe", "http://www.adobe.com/careers.html", "Software", "1,000 - 10,000") %>
-<%= table_row("VMware", "http://www.vmware.com/jobs/", "Software", "10,000 +") %>
+<%= table_row("AT&T", "http://att.jobs/", "Communications", "10,000 +") %>
+<%= table_row("Chevron", "http://careers.chevron.com/", "Oil", "10,000 +") %>
+<%= table_row("Cisco", "http://www.cisco.com/web/about/ac40/about_cisco_careers_home.html", "Hardware", "10,000 +") %>
+<%= table_row("Dell", "http://jobs.dell.com/", "Hardware", "10,000 +") %>
 <%= table_row("EMC", "http://www.emc.com/corporate/jobs/index.htm", "Software/Hardware", "10,000 +") %>
+<%= table_row("Facebook", "https://www.facebook.com/careers/", "Internet", "1,000 - 10,000") %>
+<%= table_row("Genentech", "http://www.gene.com/gene/careers/", "Biotech", "10,000 +") %>
+<%= table_row("Google", "http://www.google.com/about/jobs/", "Internet", "10,000 +") %>
+<%= table_row("HP", "http://www8.hp.com/us/en/jobsathp/index.html", "Hardware", "10,000 +") %>
+<%= table_row("Informatica", "http://careers.informatica.com/", "Software", "1,000 - 10,000") %>
+<%= table_row("Oracle", "http://www.oracle.com/us/corporate/careers/index.html", "Software", "10,000 +") %>
 <%= table_row("salesforce.com", "http://www.salesforce.com/careers/main/", "Software", "1,000 - 10,000") %>
+<%= table_row("ThoughtWorks", "http://join.thoughtworks.com/", "Software", "1,000 - 10,000") %>
 <%= table_row("VMware", "http://www.vmware.com/jobs/", "Software", "10,000 +") %>
 <%= table_end %>
