--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
 <%= table_row("Genentech", "http://www.gene.com/gene/careers/", "Biotech", "10,000 +") %>
 <%= table_row("Google", "http://www.google.com/about/jobs/", "Internet", "10,000 +") %>
 <%= table_row("HP", "http://www8.hp.com/us/en/jobsathp/index.html", "Hardware", "10,000 +") %>
-<%= table_row("informatica", "http://careers.informatica.com/", "Software", "1,000 - 10,000") %>
+<%= table_row("Informatica", "http://careers.informatica.com/", "Software", "1,000 - 10,000") %>
 <%= table_row("Oracle", "http://www.oracle.com/us/corporate/careers/index.html", "Software", "10,000 +") %>
 <%= table_row("salesforce.com", "http://www.salesforce.com/careers/main/", "Software", "1,000 - 10,000") %>
 <%= table_row("ThoughtWorks", "http://join.thoughtworks.com/", "Software", "1,000 - 10,000") %>
