--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <br><br>
       <address>
       	<strong>Please send your Resume to:</strong><br>
-      	<br><strong>Jin Zhang: </strong><u>zhangjin2004@gmail.com</u>
+      	<br><strong>Jing Zhang: </strong><u>zhangjin2004@gmail.com</u>
       	<br><strong>Ping li: </strong><u>pingsj@gmail.com</u><br>
       	<br><br><strong>Be sure to include in your email:</strong><br>
       	<br>- The <u>company</u> you apply
