--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
       <br><br>
       <address>
       	<strong>Please send your Resume to:</strong><br>
-      	<br><strong>Jing Zhang: </strong><u>zhangjin2004@gmail.com</u>
-      	<br><strong>Ping li: </strong><u>pingsj@gmail.com</u><br>
+      	<br><strong>XJTU_NC: </strong><u>xjtusv@gmail.com</u><br>
+        <br><strong>Website: </strong><u><a href="https://sites.google.com/site/xjtusv/about-xjtu-nc" target='_blank'>https://sites.google.com/site/xjtusv/about-xjtu-nc</a></u><br>
       	<br><br><strong>Be sure to include in your email:</strong><br>
       	<br>- The <u>company</u> you apply
       	<br>- The <u>job #</u> you apply
