--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,15 @@
       <br><br>
       <address>
       	<strong>Please send your Resume to:</strong><br>
-      	<br><strong>XJTU_NC: </strong><u>xjtusv@gmail.com</u><br>
-        <br><strong>Website: </strong><u><a href="https://sites.google.com/site/xjtusv/about-xjtu-nc" target='_blank'>https://sites.google.com/site/xjtusv/about-xjtu-nc</a></u><br>
+      	<br><strong>XJTU-NC: </strong><u>xjtusv@gmail.com</u><br>
       	<br><br><strong>Be sure to include in your email:</strong><br>
       	<br>- The <u>company</u> you apply
       	<br>- The <u>job #</u> you apply
       	<br>- The <u>web page link</u> of the job
       	<br>- Your <u>contact information</u>
       </address>
+      <br>
+      <h4><a href="https://sites.google.com/site/xjtusv/about-xjtu-nc" target='_blank'>XJTU-NC: Home Page</a></h4>
     </div>
     <div class="span8">
       <%= yield %>
