--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="http://xjtunc.herokuapp.com/">
+    <a class="brand" href="/">
     	Xi'an Jiaotong University - Northen California | <span style="color: lightblue";>Alumni Job Referral</span></a>
+    <h3 class="pull-right"><a href="https://sites.google.com/site/xjtusv/about-xjtu-nc" target='_blank'>About XJTU_NC</a></h3>
   </div>
 </div>
 
