For Oct 10th Presentation v2

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,10 @@
   <div class="navbar-inner">
     <a class="brand" href="/">
     	Xi'an Jiaotong University - Northen California | <span style="color: lightblue";>Alumni Job Referral</span></a>
-    <h3 class="pull-right"><a href="https://sites.google.com/site/xjtusv/about-xjtu-nc" target='_blank'>About XJTU_NC</a></h3>
+    <ul class="nav pull-right">
+    	<li><a href="https://sites.google.com/site/xjtusv/about-xjtu-nc" target='_blank'>About XJTU_NC</a></li>
+    	<li><a href="http://www.xjtu.edu.cn/en/index.html" target='_blank'>XJTU News</a></li>
+    </ul>
   </div>
 </div>
 
