--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
         <div class="control-group">
           <label class="control-label" for="inputCompany">Company you apply</label>
           <select>
+            <option value="" disabled="disabled">Select the company to apply</option>
             <option value="Adobe">Adobe</option>
             <option value="ATandT">AT&T</option>
             <option value="Chevron">Chevron</option>
